VG-4689: Fix notify by email Submit button cut off

--- a/app/styles/components/_footer.scss
+++ b/app/styles/components/_footer.scss
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 	clear: both;
 	font-size: $smallestSize;
-	margin: 60px 20px 0;
+	margin: 110px 20px 0;
 	overflow: hidden;
 	background-color: $likewhite;
 	border-top: 1px solid $borderColor;
